--- a/news/templates/all-news/base.html
+++ b/news/templates/all-news/base.html
@@ -1,3 +1,6 @@
+{% load bootstrap4 %}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -7,10 +10,24 @@
     {% else %}
     <title> Moringa Tribune</title>
     {% endif %}
+
+    {% block styles %}
+    {% bootstrap_css %}
+    {% endblock %}
+
   </head>
   <body>
+
+    {% include 'navbar.html' %}
+    
     {% block content %}
     <h1>News for {{date|date:"l d-F Y"}}</h1>
     {% endblock %}
+
+    {% block scripts %}
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   {% bootstrap_javascript %}
+   {% endblock %}
+
   </body>
 </html>
