--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -2,4 +2,20 @@
 
 {% block content %}
 {{block.super}}
+<div class="container">
+  <!-- looping through news  -->
+  {% for n in news %}
+    <div class="row">
+      <!-- displaying the articles -->
+      <div class="col-xs-6 col-md-6 col-sm-6 col-lg-6">
+        <h2 class="text-center">{{n.title}}</h2>
+      </div>
+    </div>
+    {% empty %}
+    <div class="row">
+      <h2 class="text center">There is No News Item</h2>
+    </div>
+  {% endfor %}
+</div>
+
 {% endblock %}
