--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -4,17 +4,17 @@
 {{block.super}}
 <div class="container">
   <!-- looping through news  -->
-  {% for n in news %}
+  {% for news_item in news %}
     <div class="row">
       <!-- displaying the articles -->
       <div class="col-xs-6 col-md-6 col-sm-6 col-lg-6">
-        <h2 class="text-center">{{n.title}}</h2>
+        <h2 class="text-center">{{news_item.title}}</h2>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+        <img src="{{news_item.article_image.url}}" class="img-responsive" alt="Image">
       </div>
     </div>
     <!--Display news Article images  -->
-    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-      <img src="{{news_item.article_image.url}}" class="img-responsive" alt="Image">
-    </div>
 
     {% empty %}
     <div class="row">
