--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -8,7 +8,7 @@
     <div class="row">
       <!-- displaying the articles -->
       <div class="col-xs-6 col-md-6 col-sm-6 col-lg-6">
-        <h2 class="text-center">{{news_item.title}}</h2>
+        <a href="/article/{{news_item.id}}">  <h2 class="text-center">{{news_item.title}}</h2></a>
       </div>
       <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
         <img src="{{news_item.article_image.url}}" class="img-responsive" alt="Image">
