--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -1,4 +1,5 @@
 {%extends 'all-news/base.html'%}
+{% load bootstrap4 %}
 
 {% block content %}
 {{block.super}}
@@ -21,6 +22,14 @@
       <h2 class="text center">There is No News Item</h2>
     </div>
   {% endfor %}
+  <div class="container-fluid">
+    <form class="" action="{% url 'newsToday' %}" method="post">
+      {% csrf_token %}
+
+      {% bootstrap_form letterForm layout='inline' %}
+      <input type="submit" name="" value="subscribe">
+    </form>
+  </div>
 </div>
 
 {% endblock %}
