--- a/news/templates/navbar.html
+++ b/news/templates/navbar.html
@@ -13,35 +13,38 @@
     <input class="form-control mr-sm-2" type="text" placeholder="Search Article" aria-label="Search"name="article">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
   </form>
-  <div class="col-sm-6 col-md-6">
-    {% if user.is_authenticated %}
-    <ul>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
-                  <span class="caret"></span>
-              </a>
-        <ul class="dropdown-menu" role="menu">
-          <li>
-            <a href="{%url 'newsToday'%}">Home</a>
-          </li>
-          <li>
-            <a href="/accounts/password/change">Change Password</a>
-          </li>
-          <li>
-            <a href="/logout">Logout</a>
-          </li>
-        </ul>
-      </li>
-    </ul>
-    {% else %}
-    <li>
-      <a class='btn btn-default' href="/accounts/login">Login</a>
-    </li>
-
-    {% endif %}
-  </div>
-
 </nav>
+<div class="col-sm-6 col-md-6">
+  {% if user.is_authenticated %}
+  <ul>
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
+                <span class="caret"></span>
+            </a>
+      <ul class="dropdown-menu" role="menu">
+        <li>
+          <a href="{%url 'newsToday'%}">Home</a>
+        </li>
+        <li>
+          <a href="{%url 'new-article'%}">Create Article</a>
+        </li>
+        <li>
+          <a href="/accounts/password/change">Change Password</a>
+        </li>
+        <li>
+          <a href="/logout">Logout</a>
+        </li>
+      </ul>
+    </li>
+  </ul>
+  {% else %}
+  <li>
+    <a class='btn btn-default' href="/accounts/login">Login</a>
+  </li>
+
+  {% endif %}
+</div>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
